[package]
name = "yolo"
version = "0.1.1"
authors = ["timglabisch <cargo@tim.ainfach.de>"]
description = "Rusts .yolo()"
documentation = "https://github.com/timglabisch/rust-yolo"
homepage = "https://github.com/timglabisch/rust-yolo"
repository = "https://github.com/timglabisch/rust_yolo.git"
readme = "README.md"
keywords = ["yolo"]
license = "WTFPL"

[dependencies]
